[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "nodus-jupyter"
version = "0.1.0"
description = "Jupyter kernel for the Nodus language"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "nodus-lang>=4.0.0",
    "ipykernel>=6.0",
    "jupyter-client>=7.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/Masterplanner25/nodus-jupyter"
Repository = "https://github.com/Masterplanner25/nodus-jupyter"

[tool.setuptools.packages.find]
where = ["."]
include = ["nodus_jupyter*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
